# rp2040-projects

./: README.md
embassy/active-beep/: Cargo.toml
embassy/active-beep/src/: main.rs
embassy/button/: Cargo.toml
embassy/button/src/: main.rs
embassy/buzzer-beep/: Cargo.toml
embassy/buzzer-beep/src/: main.rs
embassy/buzzer-song/: Cargo.toml
embassy/buzzer-song/src/: got.rs  main.rs  music.rs
embassy/cdc-logger/: Cargo.toml
embassy/cdc-logger/src/: main.rs
embassy/external-led/src/: main.rs
embassy/joystick/joystick-adc/: Cargo.toml
embassy/joystick/joystick-adc/src/: main.rs
embassy/lcd/custom-glyph/: Cargo.toml
embassy/lcd/mutli-glyph/: Cargo.toml
embassy/led-dimming/: Cargo.toml
embassy/led-dimming/src/: main.rs
embassy/max7219/hello-max7219/: Cargo.toml
embassy/oled/ferris-image/: Cargo.toml
embassy/oled/hello-oled/: Cargo.toml
embassy/oled/ldr-dracula/: Cargo.toml
embassy/oled/oled-rawimg/: Cargo.toml
embassy/oled/oled-rawimg/src/: main.rs
embassy/oled/temperature-oled/: Cargo.toml
embassy/pio/hello-blinky/: Cargo.toml
embassy/pio/hello-fifo/: Cargo.toml
embassy/rfid/memory-dump-usb/: Cargo.toml
embassy/rfid/print-uid/: Cargo.toml
embassy/rfid/read-blocks/: Cargo.toml
embassy/rfid/rfid-led/: Cargo.toml
embassy/rfid/uid-over-usb/: Cargo.toml
embassy/rfid/uid-over-usb/src/: main.rs
embassy/sdcard/print-over-usb/: Cargo.toml
embassy/sdcard/write-sdcard/: Cargo.toml
embassy/servo-motor/: Cargo.toml
embassy/servo-motor/src/: main.rs
embassy/ultrasonic/: Cargo.toml
embassy/ultrasonic/src/: main.rs
(+28 files in other folders)
