[package]
name = "byte-image"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
# critical-section = "1.1"

# defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = ["async"] }
